# Ent_guia3

./: README.md  pyproject.toml
Cuadernos/: Datos_obesidad.ipynb
