[tool.poetry]
name = "proyecto 3 – agrupación de datos sobre obesidad"
version = "0.1.0"
description = "Guia 3"
authors = ["Yeison Baron"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
